# Luna_Individual_Assignment

./: pyproject.toml
src/ie_bike_model/: __init__.py  model.py
test/: test_bike.py
